--- a/project.config.json
+++ b/project.config.json
@@ -45,21 +45,23 @@
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "condition": {
-    "search": {
-      "current": -1,
-      "list": []
-    },
-    "conversation": {
-      "current": -1,
+    "plugin": {
       "list": []
     },
     "game": {
-      "currentL": -1,
+      "list": []
+    },
+    "gamePlugin": {
       "list": []
     },
     "miniprogram": {
-      "current": -1,
-      "list": []
+      "list": [
+        {
+          "name": "pages/canvas/cutimage/index",
+          "pathName": "pages/canvas/cutimage/index",
+          "scene": null
+        }
+      ]
     }
   }
 }
