--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.13.1",
-  "appid": "wx0c89d53e6d82ab78",
+  "appid": "wxe3e467fc54a9a6a9",
   "projectname": "wean",
   "debugOptions": {
     "hidedInDevtools": []
